--- a/api-gestion-facturas/src/main/resources/application.properties
+++ b/api-gestion-facturas/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.username = root
 spring.datasource.password=1234
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/segurityjwt?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/securityjwt?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.jpa.database=mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
